--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="absolute -top-4 -left-4 w-64 h-64 bg-blue-100 rounded-full mix-blend-multiply filter blur-xl opacity-70 animate-blob"></div>
                         <div class="absolute -bottom-4 -right-4 w-64 h-64 bg-purple-100 rounded-full mix-blend-multiply filter blur-xl opacity-70 animate-blob animation-delay-2000"></div>
                         <div class="absolute top-16 left-16 w-64 h-64 bg-pink-100 rounded-full mix-blend-multiply filter blur-xl opacity-70 animate-blob animation-delay-4000"></div>
-                    <!--https://placehold.co/500x500-->    <img src="./images/img.png" alt="Professional headshot of Archie Belarmino smiling confidently in business casual attire" class="relative w-64 h-64 md:w-80 md:h-80 rounded-full object-cover border-4 border-white shadow-lg z-10"/>
+                    <!--https://placehold.co/500x500-->    <img src="./images/img.png" alt="Professional headshot of Archie Belarmino smiling confidently in business casual attire" class="relative w-64 h-64 md:w-80 md:h-80 rounded-full object-cover border-4 border-white shadow-lg z-10" id="emimg"/>
                     </div>
                 </div>
             </div>
@@ -75,7 +75,7 @@
             <h2 class="text-3xl font-bold text-center mb-12">About <span class="gradient-text">Me</span></h2>
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/3 mb-8 md:mb-0 flex justify-center">
-               <!--https://placehold.co/300x400-->     <img src="./images/desk.png" alt="Archie Belarmino working at a modern desk with laptop and notebook" class="rounded-lg shadow-lg w-full max-w-xs"/>
+               <!--https://placehold.co/300x400-->     <img src="./images/desk.png" alt="Archie Belarmino working at a modern desk with laptop and notebook" class="rounded-lg shadow-lg w-full max-w-xs" id="emimg1"/>
                 </div>
                 <div class="md:w-2/3 md:pl-12">
                     <h3 class="text-2xl font-semibold mb-4">Who am I?</h3>
