--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <h2 class="text-2xl md:text-3xl text-gray-600 mb-6">Web & App <span class="gradient-text">Developer</span></h2>
                     <p class="text-lg text-gray-600 mb-8 max-w-lg">I create innovative digital experiences with a focus on user-centered design and cutting-edge technology.</p>
                     <div class="flex space-x-4">
-                        <a href="#contact" class="px-6 py-3 bg-gradient-to-r from-blue-500 to-purple-600 text-white rounded-lg font-medium hover:shadow-lg transition duration-300">Hire Me</a>
+                        <a href="#contact" class="px-6 py-3 bg-gradient-to-r from-blue-500 to-purple-600 text-white rounded-lg font-medium hover:shadow-lg transition duration-300" id="hire">Hire Me</a>
                     <!--   <a href="#projects" class="px-6 py-3 border-2 border-gray-300 text-gray-700 rounded-lg font-medium hover:border-blue-500 transition duration-300">View Work</a> -->
                     </div>
                 </div>
@@ -83,15 +83,15 @@
                     
                     <h3 class="text-2xl font-semibold mb-4">What I Do</h3>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
-                        <div class="bg-gray-50 p-6 rounded-lg shadow-sm">
+                        <div class="hov bg-gray-50 p-6 rounded-lg shadow-sm">
                             <h4 class="font-semibold mb-2">Web Development</h4>
                             <p class="text-gray-600">Building responsive, performant websites with modern frameworks.</p>
                         </div>
-                        <div class="bg-gray-50 p-6 rounded-lg shadow-sm">
+                        <div class="hov bg-gray-50 p-6 rounded-lg shadow-sm">
                             <h4 class="font-semibold mb-2">UI/UX Design</h4>
                             <p class="text-gray-600">Creating intuitive user interfaces with exceptional experiences.</p>
                         </div>
-                        <div class="bg-gray-50 p-6 rounded-lg shadow-sm">
+                        <div class="hov bg-gray-50 p-6 rounded-lg shadow-sm">
                             <h4 class="font-semibold mb-2">Mobile Apps</h4>
                             <p class="text-gray-600">Developing cross-platform mobile applications for Android.</p>
                         </div>
@@ -99,8 +99,8 @@
                     </div>
                     
                     <div class="flex flex-wrap gap-4">
-                        <a href="cv/mycv.pdf" class="px-4 py-2 bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 transition duration-300">Download CV</a>
-                        <a href="#contact" class="px-4 py-2 bg-gradient-to-r from-blue-500 to-purple-600 text-white rounded-md hover:shadow-md transition duration-300">Contact Me</a>
+                        <a href="cv/mycv.pdf" class="px-4 py-2 bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 transition duration-300" id="download">Download CV</a>
+                        <a href="#contact" class="px-4 py-2 bg-gradient-to-r from-blue-500 to-purple-600 text-white rounded-md hover:shadow-md transition duration-300" id="contact">Contact Me</a>
                     </div>
                 </div>
             </div>
@@ -160,6 +160,17 @@
                             </div>
                             <div class="w-full bg-gray-200 rounded-full h-2.5">
                                 <div class="skill-bar bg-pink-500 h-2.5 rounded-full" style="width: 80%"></div>
+                            </div>
+                        </div>
+
+
+                          <div>
+                            <div class="flex justify-between mb-1">
+                                <span class="font-medium">C++</span>
+                                <span class="text-gray-600">85%</span>
+                            </div>
+                            <div class="w-full bg-gray-200 rounded-full h-2.5">
+                                <div class="skill-bar bg-blue-500 h-2.5 rounded-full" style="width: 85%"></div>
                             </div>
                         </div>
 
