--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>About Me</title>
     <script src="https://cdn.tailwindcss.com"></script>
    <link rel="stylesheet" href="css/styles.css">
+ <link rel="icon" href="images/information.png" type="image/x-icon">
 </head>
 <body class="bg-gray-50 text-gray-800">
     <!-- Navigation -->
