--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>About Me</title>
     <script src="https://cdn.tailwindcss.com"></script>
    <link rel="stylesheet" href="css/styles.css">
- <link rel="icon" href="images/information.png" type="image/x-icon">
+   <link rel="shortcut icon" href="images/information.png" type="image/x-icon">
 </head>
 <body class="bg-gray-50 text-gray-800">
     <!-- Navigation -->
@@ -78,21 +78,21 @@
                 <div class="md:w-1/3 mb-8 md:mb-0 flex justify-center">
                <!--https://placehold.co/300x400-->     <img src="./images/desk.png" alt="Archie Belarmino working at a modern desk with laptop and notebook" class="rounded-lg shadow-lg w-full max-w-xs" id="emimg1"/>
                 </div>
-                <div class="md:w-2/3 md:pl-12">
+                <div class="md:w-2/3 md:pl-12"> 
                     <h3 class="text-2xl font-semibold mb-4">Who am I?</h3>
                     <p class="text-gray-600 mb-6">I'm a passionate developer creating digital solutions that solve real-world problems.</p>
                     
                     <h3 class="text-2xl font-semibold mb-4">What I Do</h3>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
-                        <div class="hov bg-gray-50 p-6 rounded-lg shadow-sm">
+                        <div class="bg-gray-50 p-6 rounded-lg shadow-sm">
                             <h4 class="font-semibold mb-2">Web Development</h4>
                             <p class="text-gray-600">Building responsive, performant websites with modern frameworks.</p>
                         </div>
-                        <div class="hov bg-gray-50 p-6 rounded-lg shadow-sm">
+                        <div class="bg-gray-50 p-6 rounded-lg shadow-sm">
                             <h4 class="font-semibold mb-2">UI/UX Design</h4>
                             <p class="text-gray-600">Creating intuitive user interfaces with exceptional experiences.</p>
                         </div>
-                        <div class="hov bg-gray-50 p-6 rounded-lg shadow-sm">
+                        <div class="bg-gray-50 p-6 rounded-lg shadow-sm">
                             <h4 class="font-semibold mb-2">Mobile Apps</h4>
                             <p class="text-gray-600">Developing cross-platform mobile applications for Android.</p>
                         </div>
@@ -101,7 +101,7 @@
                     
                     <div class="flex flex-wrap gap-4">
                         <a href="cv/mycv.pdf" class="px-4 py-2 bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 transition duration-300" id="download">Download CV</a>
-                        <a href="#contact" class="px-4 py-2 bg-gradient-to-r from-blue-500 to-purple-600 text-white rounded-md hover:shadow-md transition duration-300" id="contact">Contact Me</a>
+                        <a href="#contact" class="px-4 py-2 bg-gradient-to-r from-blue-500 to-purple-600 text-white rounded-md hover:shadow-md transition duration-300" id="cont">Contact Me</a>
                     </div>
                 </div>
             </div>
