--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     
                     <div class="flex flex-wrap gap-4">
                         <a href="cv/mycv.pdf" class="px-4 py-2 bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 transition duration-300" id="download">Download CV</a>
-                        <a href="#contact" class="px-4 py-2 bg-gradient-to-r from-blue-500 to-purple-600 text-white rounded-md hover:shadow-md transition duration-300" id="cont">Contact Me</a>
+                        <a href="#cont" class="px-4 py-2 bg-gradient-to-r from-blue-500 to-purple-600 text-white rounded-md hover:shadow-md transition duration-300" id="cont">Contact Me</a>
                     </div>
                 </div>
             </div>
