--- a/index.html
+++ b/index.html
@@ -233,8 +233,13 @@
                         <span>Figma</span>
                     </div>
                     <div class="bg-gray-50 px-6 py-3 rounded-lg shadow-sm flex items-center">
-                        <img src="images/androidstudio.png" alt="Adobe XD logo" class="mr-2" width="30" height="30">
+                        <img src="images/androidstudio.png" alt="Android Studio logo" class="mr-2" width="30" height="30">
                         <span>Android Studio</span>
+                    </div>
+
+                      <div class="bg-gray-50 px-6 py-3 rounded-lg shadow-sm flex items-center">
+                        <img src="images/adobexd.png" alt="Adobe XD logo" class="mr-2" width="30" height="30">
+                        <span>Adobe XD</span>
                     </div>
                    
                 </div>
