--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                             </div>
                             <div>
                                 <h4 class="font-medium text-gray-700">Location</h4>
-                                <p class="text-gray-600">Mabini, Cebu, City Cebu, Philippines</p>
+                                <p class="text-gray-600">Mabini, Cebu City, Cebu, Philippines</p>
                             </div>
                         </div>
                     </div>
