--- a/index.html
+++ b/index.html
@@ -135,6 +135,27 @@
                                 <div class="skill-bar bg-purple-600 h-2.5 rounded-full" style="width: 90%"></div>
                             </div>
                         </div>
+
+                         <div>
+                            <div class="flex justify-between mb-1">
+                                <span class="font-medium">React</span>
+                                <span class="text-gray-600">60%</span>
+                            </div>
+                            <div class="w-full bg-gray-200 rounded-full h-2.5">
+                                <div class="skill-bar bg-sky-600 h-2.5 rounded-full" style="width: 60%"></div>
+                            </div>
+                        </div>
+
+                         <div>
+                            <div class="flex justify-between mb-1">
+                                <span class="font-medium">Node.js</span>
+                                <span class="text-gray-600">40%</span>
+                            </div>
+                            <div class="w-full bg-gray-200 rounded-full h-2.5">
+                                <div class="skill-bar bg-green-600 h-2.5 rounded-full" style="width: 40%"></div>
+                            </div>
+                        </div>
+                        
                         <div>
                             <div class="flex justify-between mb-1">
                                 <span class="font-medium">PHP</span>
@@ -247,7 +268,7 @@
         </div>
     </section>
 
-   <!-- Projects Section 
+   <!-- Projects Section --> 
 <section id="projects" class="py-16 bg-white px-4 sm:px-6 lg:px-8">
   <div class="max-w-6xl mx-auto">
     <h2 class="text-3xl font-bold text-center mb-12">
@@ -265,7 +286,16 @@
         </div>
       </div>
 
-    
+         <div class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl max-w-sm w-full">
+        <img src="https://placehold.co/600x400" alt="MSV Resort" class="w-full h-48 object-cover" />
+        <div class="p-6">
+          <h3 class="text-xl font-semibold mb-2">JumPixel</h3>
+          <p class="text-gray-600 mb-4">A fast-paced jumping game.</p>
+          <a href="https://acchiii.github.io/JumPixel" class="text-blue-600 hover:text-blue-800 font-medium">View Project →</a>
+        </div>
+      </div>
+
+       <!--
       <div class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl max-w-sm w-full">
         <img src="https://placehold.co/600x400" alt="App Store" class="w-full h-48 object-cover" />
         <div class="p-6">
@@ -274,10 +304,11 @@
           <a href="#" class="text-blue-600 hover:text-blue-800 font-medium">View Project →</a>
         </div>
       </div>
-    </div>
+             -->
+    </div> 
   </div>
 </section>
--->
+
 
     <!-- Contact Section -->
     <section id="contact" class="py-16 bg-gray-50 px-4 sm:px-6 lg:px-8">
@@ -369,5 +400,6 @@
     <script src="js/functions.js"></script>
 </body>
 </html>
+
 
 
