--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <img src="./images/msv" alt="Project Logo" class="w-full h-48 object-cover" />
         <div class="p-6">
           <h3 class="text-xl font-semibold mb-2">MSV Resort</h3>
-          <p class="text-gray-600 mb-4">Mabini Sky View Resort website</p>
+          <p class="text-gray-600 mb-4">MSV Resort Website</p>
           <a href="https://acchiii.github.io/msv" class="text-blue-600 hover:text-blue-800 font-medium">View Project →</a>
         </div>
       </div>
@@ -400,6 +400,7 @@
     <script src="js/functions.js"></script>
 </body>
 </html>
+
 
 
 
