--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       </div>
 
          <div class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl max-w-sm w-full">
-        <img src="./images/jumpixel" alt="Project Logo" class="w-full h-48 object-cover" />
+        <img src="./images/jumpixel.png" alt="Project Logo" class="w-full h-48 object-cover" />
         <div class="p-6">
           <h3 class="text-xl font-semibold mb-2">JumPixel</h3>
           <p class="text-gray-600 mb-4">A fast-paced jumping game.</p>
@@ -400,6 +400,7 @@
     <script src="js/functions.js"></script>
 </body>
 </html>
+
 
 
 
