--- a/index.html
+++ b/index.html
@@ -295,16 +295,16 @@
         </div>
       </div>
 
-       <!--
+       
       <div class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl max-w-sm w-full">
-        <img src="https://placehold.co/600x400" alt="App Store" class="w-full h-48 object-cover" />
+        <img src="./images/bhms.png" alt="Project Logo" class="w-full h-48 object-cover" />
         <div class="p-6">
-          <h3 class="text-xl font-semibold mb-2">App Store</h3>
-          <p class="text-gray-600 mb-4">Application store for mobile devices built with Java.</p>
+          <h3 class="text-xl font-semibold mb-2">BH Management System</h3>
+          <p class="text-gray-600 mb-4">A web-based system that helps landlords and tenant to reduce manual processes and improve communication.</p>
           <a href="#" class="text-blue-600 hover:text-blue-800 font-medium">View Project →</a>
         </div>
       </div>
-             -->
+             
     </div> 
   </div>
 </section>
@@ -400,6 +400,7 @@
     <script src="js/functions.js"></script>
 </body>
 </html>
+
 
 
 
