--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         <div class="p-6">
           <h3 class="text-xl font-semibold mb-2">BH Management System</h3>
           <p class="text-gray-600 mb-4">A web-based system that helps landlords and tenant to reduce manual processes and improve communication.</p>
-          <a href="#" class="text-blue-600 hover:text-blue-800 font-medium">View Project →</a>
+          <a href="https://acchiii.github.io/bhms" class="text-blue-600 hover:text-blue-800 font-medium">View Project →</a>
         </div>
       </div>
              
@@ -400,6 +400,7 @@
     <script src="js/functions.js"></script>
 </body>
 </html>
+
 
 
 
