--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 justify-center">
      
       <div class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl max-w-sm w-full">
-        <img src="./images/msv" alt="Project Logo" class="w-full h-48 object-cover" />
+        <img src="./images/msv.png" alt="Project Logo" class="w-full h-48 object-cover" />
         <div class="p-6">
           <h3 class="text-xl font-semibold mb-2">MSV Resort</h3>
-          <p class="text-gray-600 mb-4">MSV Resort Website</p>
+          <p class="text-gray-600 mb-4">A web-based system for Mabini Sky View Resort that offers a various features.</p>
           <a href="https://acchiii.github.io/msv" class="text-blue-600 hover:text-blue-800 font-medium">View Project →</a>
         </div>
       </div>
@@ -290,7 +290,7 @@
         <img src="./images/jumpixel.png" alt="Project Logo" class="w-full h-48 object-cover" />
         <div class="p-6">
           <h3 class="text-xl font-semibold mb-2">JumPixel</h3>
-          <p class="text-gray-600 mb-4">A fast-paced jumping game.</p>
+          <p class="text-gray-600 mb-4">Jumpixel is a fun and fast-paced platformer game where players guide a tiny pixel character through colorful worlds filled with coins and tricky jumps.</p>
           <a href="https://acchiii.github.io/JumPixel" class="text-blue-600 hover:text-blue-800 font-medium">View Project →</a>
         </div>
       </div>
@@ -301,7 +301,7 @@
         <div class="p-6">
           <h3 class="text-xl font-semibold mb-2">BH Management System</h3>
           <p class="text-gray-600 mb-4">A web-based system that helps landlords and tenant to reduce manual processes and improve communication.</p>
-          <a href="https://acchiii.github.io/bhms" class="text-blue-600 hover:text-blue-800 font-medium">View Project →</a>
+          <a href="https://github.dev/acchiii/bhms" class="text-blue-600 hover:text-blue-800 font-medium">View Project →</a>
         </div>
       </div>
              
