--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a href="#home" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Home</a>
                 <a href="#about" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">About</a>
                 <a href="#skills" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Skills</a>
-               <!--  <a href="#projects" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Projects</a> -->
+                 <a href="#projects" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Projects</a>
                 <a href="#contact" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Contact</a>
             </div>
         </div>
@@ -55,7 +55,7 @@
                     <p class="text-lg text-gray-600 mb-8 max-w-lg">I create innovative digital experiences with a focus on user-centered design and cutting-edge technology.</p>
                     <div class="flex space-x-4">
                         <a href="#contact" class="px-6 py-3 bg-gradient-to-r from-blue-500 to-purple-600 text-white rounded-lg font-medium hover:shadow-lg transition duration-300" id="hire">Hire Me</a>
-                    <!--   <a href="#projects" class="px-6 py-3 border-2 border-gray-300 text-gray-700 rounded-lg font-medium hover:border-blue-500 transition duration-300">View Work</a> -->
+                     <a href="#projects" class="px-6 py-3 border-2 border-gray-300 text-gray-700 rounded-lg font-medium hover:border-blue-500 transition duration-300">View Work</a> 
                     </div>
                 </div>
                 <div class="md:w-1/2 flex justify-center">
@@ -63,7 +63,7 @@
                         <div class="absolute -top-4 -left-4 w-64 h-64 bg-blue-100 rounded-full mix-blend-multiply filter blur-xl opacity-70 animate-blob"></div>
                         <div class="absolute -bottom-4 -right-4 w-64 h-64 bg-purple-100 rounded-full mix-blend-multiply filter blur-xl opacity-70 animate-blob animation-delay-2000"></div>
                         <div class="absolute top-16 left-16 w-64 h-64 bg-pink-100 rounded-full mix-blend-multiply filter blur-xl opacity-70 animate-blob animation-delay-4000"></div>
-                    <!--https://placehold.co/500x500-->    <img src="./images/img.png" alt="Professional headshot of Archie Belarmino smiling confidently in business casual attire" class="relative w-64 h-64 md:w-80 md:h-80 rounded-full object-cover border-4 border-white shadow-lg z-10" id="emimg"/>
+                        <img src="./images/img.png" alt="Professional headshot of Archie Belarmino smiling confidently in business casual attire" class="relative w-64 h-64 md:w-80 md:h-80 rounded-full object-cover border-4 border-white shadow-lg z-10" id="emimg"/>
                     </div>
                 </div>
             </div>
@@ -76,7 +76,7 @@
             <h2 class="text-3xl font-bold text-center mb-12">About <span class="gradient-text">Me</span></h2>
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/3 mb-8 md:mb-0 flex justify-center">
-               <!--https://placehold.co/300x400-->     <img src="./images/desk.png" alt="Archie Belarmino working at a modern desk with laptop and notebook" class="rounded-lg shadow-lg w-full max-w-xs" id="emimg1"/>
+                <img src="./images/desk.png" alt="Archie Belarmino working at a modern desk with laptop and notebook" class="rounded-lg shadow-lg w-full max-w-xs" id="emimg1"/>
                 </div>
                 <div class="md:w-2/3 md:pl-12"> 
                     <h3 class="text-2xl font-semibold mb-4">Who am I?</h3>
@@ -400,6 +400,7 @@
     <script src="js/functions.js"></script>
 </body>
 </html>
+
 
 
 
