--- a/index.html
+++ b/index.html
@@ -48,25 +48,29 @@
     <!-- Hero Section -->
     <section id="home" class="pt-28 pb-20 md:pt-36 md:pb-28 px-4 sm:px-6 lg:px-8">
         <div class="max-w-6xl mx-auto">
-            <div class="flex flex-col md:flex-row items-center">
-                <div class="md:w-1/2 mb-10 md:mb-0">
-                    <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-4">Hi, I'm <span class="gradient-text">Archie Belarmino</span></h1>
-                    <h2 class="text-2xl md:text-3xl text-gray-600 mb-6">Web & App <span class="gradient-text">Developer</span></h2>
-                    <p class="text-lg text-gray-600 mb-8 max-w-lg">I create innovative digital experiences with a focus on user-centered design and cutting-edge technology.</p>
-                    <div class="flex space-x-4">
-                        <a href="#contact" class="px-6 py-3 bg-gradient-to-r from-blue-500 to-purple-600 text-white rounded-lg font-medium hover:shadow-lg transition duration-300" id="hire">Hire Me</a>
-                     <a href="#projects" class="px-6 py-3 border-2 border-gray-300 text-gray-700 rounded-lg font-medium hover:border-blue-500 transition duration-300">View Work</a> 
-                    </div>
-                </div>
-                <div class="md:w-1/2 flex justify-center">
-                    <div class="relative">
-                        <div class="absolute -top-4 -left-4 w-64 h-64 bg-blue-100 rounded-full mix-blend-multiply filter blur-xl opacity-70 animate-blob"></div>
-                        <div class="absolute -bottom-4 -right-4 w-64 h-64 bg-purple-100 rounded-full mix-blend-multiply filter blur-xl opacity-70 animate-blob animation-delay-2000"></div>
-                        <div class="absolute top-16 left-16 w-64 h-64 bg-pink-100 rounded-full mix-blend-multiply filter blur-xl opacity-70 animate-blob animation-delay-4000"></div>
-                        <img src="./images/img.png" alt="Professional headshot of Archie Belarmino smiling confidently in business casual attire" class="relative w-64 h-64 md:w-80 md:h-80 rounded-full object-cover border-4 border-white shadow-lg z-10" id="emimg"/>
-                    </div>
-                </div>
-            </div>
+           <div class="flex flex-col md:flex-row items-center">
+    <!-- Image first on mobile -->
+    <div class="order-1 md:order-2 md:w-1/2 flex justify-center mb-10 md:mb-0">
+        <div class="relative">
+            <div class="absolute -top-4 -left-4 w-64 h-64 bg-blue-100 rounded-full mix-blend-multiply filter blur-xl opacity-70 animate-blob"></div>
+            <div class="absolute -bottom-4 -right-4 w-64 h-64 bg-purple-100 rounded-full mix-blend-multiply filter blur-xl opacity-70 animate-blob animation-delay-2000"></div>
+            <div class="absolute top-16 left-16 w-64 h-64 bg-pink-100 rounded-full mix-blend-multiply filter blur-xl opacity-70 animate-blob animation-delay-4000"></div>
+            <img src="./images/img.png" alt="Professional headshot of Archie Belarmino smiling confidently in business casual attire" class="relative w-64 h-64 md:w-80 md:h-80 rounded-full object-cover border-4 border-white shadow-lg z-10" id="emimg"/>
+        </div>
+    </div>
+
+    <!-- Text second on mobile -->
+    <div class="order-2 md:order-1 md:w-1/2">
+        <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-4">Hi, I'm <span class="gradient-text">Archie Belarmino</span></h1>
+        <h2 class="text-2xl md:text-3xl text-gray-600 mb-6">Web & App <span class="gradient-text">Developer</span></h2>
+        <p class="text-lg text-gray-600 mb-8 max-w-lg">I create innovative digital experiences with a focus on user-centered design and cutting-edge technology.</p>
+        <div class="flex space-x-4">
+            <a href="#contact" class="px-6 py-3 bg-gradient-to-r from-blue-500 to-purple-600 text-white rounded-lg font-medium hover:shadow-lg transition duration-300" id="hire">Hire Me</a>
+            <a href="#projects" class="px-6 py-3 border-2 border-gray-300 text-gray-700 rounded-lg font-medium hover:border-blue-500 transition duration-300">View Work</a> 
+        </div>
+    </div>
+</div>
+
         </div>
     </section>
 
@@ -400,6 +404,7 @@
     <script src="js/functions.js"></script>
 </body>
 </html>
+
 
 
 
