--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </div>
                     
                     <div class="flex flex-wrap gap-4">
-                        <a href="cv/acchiii-cv.pdf" class="px-4 py-2 bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 transition duration-300" id="download">My Resume</a>
+                        <a href="cv/acchiii-cv.pdf" style="display:none;" class="px-4 py-2 bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 transition duration-300" id="download">My Resume</a>
                         <a href="#contact" class="px-4 py-2 bg-gradient-to-r from-blue-500 to-purple-600 text-white rounded-md hover:shadow-md transition duration-300" id="cont">Contact Me</a>
                     </div>
                 </div>
@@ -403,6 +403,7 @@
     <script src="js/functions.js"></script>
 </body>
 </html>
+
 
 
 
