--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         <div class="p-6">
           <h3 class="text-xl font-semibold mb-2">JumPixel</h3>
           <p class="text-gray-600 mb-4">Jumpixel is a fun and fast-paced platformer game where players guide a tiny pixel character through colorful worlds filled with coins and tricky jumps.</p>
-          <a href="https://github.dev/acchiii/JumPixel" class="text-blue-600 hover:text-blue-800 font-medium">View Project →</a>
+          <a href="https://github.com/acchiii/JumPixel" class="text-blue-600 hover:text-blue-800 font-medium">View Project →</a>
         </div>
       </div>
 
@@ -304,7 +304,7 @@
         <div class="p-6">
           <h3 class="text-xl font-semibold mb-2">BH Management System</h3>
           <p class="text-gray-600 mb-4">A web-based system that helps landlords and tenant to reduce manual processes and improve communication.</p>
-          <a href="https://github.dev/acchiii/bhms" class="text-blue-600 hover:text-blue-800 font-medium">View Project →</a>
+          <a href="https://github.com/acchiii/bhms" class="text-blue-600 hover:text-blue-800 font-medium">View Project →</a>
         </div>
       </div>
              
@@ -403,6 +403,7 @@
     <script src="js/functions.js"></script>
 </body>
 </html>
+
 
 
 
