--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <!-- Hero Section -->
     <section id="home" class="pt-28 pb-20 md:pt-36 md:pb-28 px-4 sm:px-6 lg:px-8">
-        <div class="max-w-6xl mx-auto">
+        <div class="max-w-7xl mx-auto">
            <div class="flex flex-col md:flex-row items-center">
     <!-- Image first on mobile -->
     <div class="order-1 md:order-2 md:w-1/2 flex justify-center mb-10 md:mb-0">
@@ -139,6 +139,16 @@
                             </div>
                         </div>
 
+                         <div>
+                            <div class="flex justify-between mb-1">
+                                <span class="font-medium">Tailwind</span>
+                                <span class="text-gray-600">90%</span>
+                            </div>
+                            <div class="w-full bg-gray-200 rounded-full h-2.5">
+                                <div class="skill-bar bg-pink-600 h-2.5 rounded-full" style="width: 90%"></div>
+                            </div>
+                        </div>
+                        
                          <div>
                             <div class="flex justify-between mb-1">
                                 <span class="font-medium">React</span>
@@ -403,6 +413,7 @@
     <script src="js/functions.js"></script>
 </body>
 </html>
+
 
 
 
