--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="#home" class="nav-link active">Home</a>
                     <a href="#about" class="nav-link">About</a>
                     <a href="#skills" class="nav-link">Skills</a>
-                  <!--  <a href="#projects" class="nav-link">Projects</a> -->
+                    <a href="#projects" class="nav-link">Projects</a>
                     <a href="#contact" class="nav-link">Contact</a>
                 </div>
                 <div class="md:hidden flex items-center">
@@ -413,6 +413,7 @@
     <script src="js/functions.js"></script>
 </body>
 </html>
+
 
 
 
