--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <img src="./images/bhms.png" alt="Project Logo" class="w-full h-48 object-cover" />
         <div class="p-6">
           <h3 class="text-xl font-semibold mb-2">BH Management System</h3>
-          <p class="text-gray-600 mb-4">A web-based system that helps landlords and tenant to reduce manual processes and improve communication.</p>
+          <p class="text-gray-600 mb-4">A web-based system that helps landlords to manage their properties, reduce manual processes, and improve communication.</p>
           <a href="https://github.com/acchiii/bhms" class="text-blue-600 hover:text-blue-800 font-medium">View Project →</a>
         </div>
       </div>
@@ -405,6 +405,7 @@
     <script src="js/functions.js"></script>
 </body>
 </html>
+
 
 
 
