--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="home" class="pt-28 pb-20 md:pt-36 md:pb-28 px-4 sm:px-6 lg:px-8">
+    <section id="home" class="min-h-screen flex items-center px-4 sm:px-6 lg:px-8">
         <div class="max-w-7xl mx-auto">
            <div class="flex flex-col md:flex-row items-center">
     <!-- Image first on mobile -->
@@ -405,6 +405,7 @@
     <script src="js/functions.js"></script>
 </body>
 </html>
+
 
 
 
