--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="min-h-full flex items-center px-4 sm:px-6 lg:px-8">
+    <section class="min-h-100% flex items-center px-4 sm:px-6 lg:px-8">
         <div class="max-w-6xl mx-auto">
            <div class="flex flex-col md:flex-row items-center">
     <!-- Image first on mobile -->
@@ -405,6 +405,7 @@
     <script src="js/functions.js"></script>
 </body>
 </html>
+
 
 
 
