--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-   <link rel="stylesheet" href="css/styles.css">
+   <link rel="stylesheet" href="./css/styles.css">
    <link rel="shortcut icon" href="images/information.png" type="image/x-icon">
 </head>
 <body class="bg-gray-50 text-gray-800">
@@ -404,6 +404,7 @@
     <script src="js/functions.js"></script>
 </body>
 </html>
+
 
 
 
