--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>About Me</title>
    <link rel="stylesheet" href="./css/styles.css">
    <link rel="shortcut icon" href="images/information.png" type="image/x-icon">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 text-gray-800">
     <!-- Navigation -->
@@ -404,6 +405,7 @@
     <script src="js/functions.js"></script>
 </body>
 </html>
+
 
 
 
