--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
    <link rel="shortcut icon" href="images/information.png" type="image/x-icon">
-    <script src="https://cdn.tailwindcss.com"></script>
      <link rel="stylesheet" href="./css/styles.css">
+     <link rel="stylesheet" href="./css/output.css">
 </head>
 <body class="bg-gray-50 text-gray-800">
     <!-- Navigation -->
