--- a/index.html
+++ b/index.html
@@ -292,11 +292,11 @@
       </div>
 
          <div class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl max-w-sm w-full">
-        <img src="./images/jumpixel.png" alt="Project Logo" class="w-full h-48 object-cover" />
+        <img src="./images/lukso.png" alt="Project Logo" class="w-full h-48 object-cover" />
         <div class="p-6">
           <h3 class="text-xl font-semibold mb-2">JumPixel</h3>
-          <p class="text-gray-600 mb-4">Jumpixel is a fun and fast-paced platformer game where players guide a tiny pixel character through colorful worlds filled with coins and tricky jumps.</p>
-          <a href="https://github.com/acchiii/JumPixel" class="text-blue-600 hover:text-blue-800 font-medium">View Project →</a>
+          <p class="text-gray-600 mb-4">Jumpixel is a side-scrolling platformer game inspired by the traditional Filipino game. The player controls a character that must jump over a cow and collect coins The objective is to achieve the highest score by jumping over as many cows as possible and collecting coins.</p>
+          <a href="https://github.com/acchiii/Luksong-Baka" class="text-blue-600 hover:text-blue-800 font-medium">View Project →</a>
         </div>
       </div>
 
@@ -405,6 +405,7 @@
     <script src="js/functions.js"></script>
 </body>
 </html>
+
 
 
 
