--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         <div class="p-6">
           <h3 class="text-xl font-semibold mb-2">JumPixel</h3>
           <p class="text-gray-600 mb-4">Jumpixel is a side-scrolling platformer game inspired by the traditional Filipino game. The player controls a character that must jump over a cow and collect coins The objective is to achieve the highest score by jumping over as many cows as possible and collecting coins.</p>
-          <a href="https://github.com/acchiii/Luksong-Baka" class="text-blue-600 hover:text-blue-800 font-medium">View Project →</a>
+          <a href="https://acchiii.github.io/Luksong-Baka" class="text-blue-600 hover:text-blue-800 font-medium">View Project →</a>
         </div>
       </div>
 
@@ -405,6 +405,7 @@
     <script src="js/functions.js"></script>
 </body>
 </html>
+
 
 
 
